<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ak93.timeit.activities.HomeActivity"
    android:background="@color/color_bg">

    <ImageView
        android:id="@+id/title_img"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/time_it_up_icon"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_home_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/navigation_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_img"
        android:layout_above="@id/adView"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        >

        <com.ak93.timeit.views.FontView
            android:id="@+id/but_play"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_menu_play"
            style="@style/Style_HomeScreenButton"
            app:customFont="LatoLight.ttf"
            />

        <com.ak93.timeit.views.FontView
            android:id="@+id/but_play_hard"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_menu_play_hard"
            style="@style/Style_HomeScreenButton"
            app:customFont="LatoLight.ttf"
            android:visibility="gone"
            />

        <com.ak93.timeit.views.FontView
            android:id="@+id/but_time_hall"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_menu_score"
            style="@style/Style_HomeScreenButton"
            app:customFont="LatoLight.ttf"
            />

        <com.ak93.timeit.views.FontView
            android:id="@+id/but_tutorial"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_menu_tutorial"
            style="@style/Style_HomeScreenButton"
            app:customFont="LatoLight.ttf"
            />

        <com.ak93.timeit.views.FontView
            android:id="@+id/but_about"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_menu_about"
            style="@style/Style_HomeScreenButton"
            app:customFont="LatoLight.ttf"
            />

        <!-- SIGN-IN BAR -->
        <LinearLayout
            android:id="@+id/sign_in_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Style_HomeScreenButton"
            >

            <com.google.android.gms.common.SignInButton
                android:id="@+id/button_sign_in"
                style="@style/SignInButton"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>