<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ak93.timeit.activities.HomeActivity"
    android:background="@color/color_bg"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/button_back"
        android:layout_margin="16dp"
        />

    <ImageView
        android:id="@+id/resetScoreButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/reset_icon1"
        android:layout_margin="16dp"
        />

    <ImageView
        android:id="@+id/title_img"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/time_it_up_icon"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        />

    <com.ak93.timeit.views.FontView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_menu_score"
        android:textSize="25pt"
        app:customFont="LatoRegular.ttf"
        android:textColor="@color/color_text_light"
        android:gravity="center"
        android:layout_below="@id/title_img"
        android:layout_marginBottom="10dp"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_halloftime_id">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_above="@id/adView"
        android:paddingBottom="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
            <!-- Best game score -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.ak93.timeit.views.FontView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_best_game"
                    style="@style/style_scoreboard_label"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
                <com.ak93.timeit.views.FontView
                    android:id="@+id/bestScoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xxxx"
                    style="@style/style_scoreboard_score"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <!-- Best single timer score -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.ak93.timeit.views.FontView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_best_timer"
                    style="@style/style_scoreboard_label"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
                <com.ak93.timeit.views.FontView
                    android:id="@+id/bestTimerScoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xxxx"
                    style="@style/style_scoreboard_score"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <!-- Best single timer score -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.ak93.timeit.views.FontView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_average_timer"
                    style="@style/style_scoreboard_label"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
                <com.ak93.timeit.views.FontView
                    android:id="@+id/averageTimerScoreText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xxxx"
                    style="@style/style_scoreboard_score"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <!-- Best level reached -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.ak93.timeit.views.FontView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_best_lvl"
                    style="@style/style_scoreboard_label"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
                <com.ak93.timeit.views.FontView
                    android:id="@+id/bestLevelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xxxx"
                    style="@style/style_scoreboard_score"
                    app:customFont="LatoLight.ttf"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/achievements_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_home_but"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                >
                <ImageView
                    android:layout_width="15pt"
                    android:layout_height="15pt"
                    android:src="@drawable/star3"
                    android:layout_gravity="center"
                    />

                <com.ak93.timeit.views.FontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Achievements"
                    android:textColor="@color/color_text_light"
                    android:textSize="12pt"
                    android:layout_margin="10dp"
                    />

                <ImageView
                    android:layout_width="15pt"
                    android:layout_height="15pt"
                    android:src="@drawable/star3"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>